--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         var NYCLayer = L.geoJSON().addTo(map)
 
         // read the NYC coordinates and add to the NYCLayer
-        var nyc = d3.json("sinataslim.github.io/NYCboundaries.json.json")
-        var SqGrid = d3.json("sinataslim.github.io/squareGrid.json")
+        var nyc = d3.json("NYCboundaries.json.json")
+        var SqGrid = d3.json("squareGrid.json")
         
         Promise.all([nyc, SqGrid]).then(ready)
 
