--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
-    <script type="text/javascript" src="https://stamen-tiles-{s}.a.ssl.fastly.net/js/tile.stamen.js"></script>
+    <script type="text/javascript" src=https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src='https://unpkg.com/@turf/turf@6.3.0/turf.min.js'></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/geojson-extent/v1.0.0/geojson-extent.js'></script>
@@ -40,7 +40,7 @@
         //}).addTo(mymap);
         
         // specify stamen tile layer
-        var mapTileLayer = new L.StamenTileLayer("terrain");
+        var mapTileLayer = new L.StamenTileLayer("https://stamen-tiles.a.ssl.fastly.net/terrain/{z}/{x}/{y}.jpg");
 
         // set the map centre, zoom and div-id
         var map = new L.Map("mapid", {
