--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
         //}).addTo(mymap);
         
         // specify stamen tile layer
-        var mapTileLayer = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/terrain/{z}/{x}/{y}.{ext}', {
-            attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-            ext: 'png'
-        });
+        var mapTileLayer = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/terrain/{z}/{x}/{y}.png'});
 
         // set the map centre, zoom and div-id
         var map = new L.Map("mapid", {
