--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         //}).addTo(mymap);
         
         // specify stamen tile layer
-        var mapTileLayer = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/terrain/{z}/{x}/{y}.jpg'});
+        var mapTileLayer = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/terrain/{z}/{x}/{y}.jpg');
 
         // set the map centre, zoom and div-id
         var map = new L.Map("mapid", {
